src/test/deca/syntax/invalid/chaine_incomplete.deca
// Description :
//    tests de programme incorrect lexicalement (chaine non terminee)
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : token recognition error at: '"chaine pas finie\n'

"chaine pas finie
